# system_resource_monitor

./: .gitignore  CMakeLists.txt  Main.qml  main.cpp  sysmonitor.cpp  sysmonitor.h
